--- a/project/car_rent/templates/car_rent/list.html
+++ b/project/car_rent/templates/car_rent/list.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+{%load i18n%}
 {%load car_filter%}
 <body>
 <div>
     <table>
+        {%blocktrans%}
+        <tr>
+            <td>Name</td>
+            <td>Reg. number</td>
+            <td>User</td>
+        </tr>
+        {%endblocktrans%}
         {%for car in cars%}
         <tr>
             <td title="{{car.name}}">
